# Mosaik

./: CMakeLists.txt  README  README.md
CommonSource/Config/: Mosaik.h
CommonSource/DataStructures/: AlignedRead.h  Alignment.h  HashRegion.h  JumpDnaHash.cpp  JumpDnaHash.h  MosaikString.cpp  MosaikString.h
CommonSource/MosaikReadFormat/: AlignmentReader.cpp  AlignmentWriter.cpp
CommonSource/UnitTests/: ColorspaceUtilitiesTest.cpp  SequenceUtilitiesTest.cpp
CommonSource/Utilities/: ColorspaceUtilities.cpp  ColorspaceUtilities.h  Makefile  MemoryUtilities.cpp  MemoryUtilities.h  Options.cpp  PairwiseUtilities.cpp  PairwiseUtilities.h
MosaikAligner/: AlignerMain.cpp  AlignmentThread.cpp  AlignmentThread.h  MosaikAligner.cpp  MosaikAligner.h
MosaikJump/: JumpCreator.cpp  JumpCreator.h  JumpMain.cpp
MosaikSort/: PairedEndSort.h
MosaikTools/: README
MosaikTools/c++/: Makefile  MosaikAlignment.cpp  MosaikAlignment.h  MosaikConversionMain.cpp  MosaikReaderMain.cpp
MosaikTools/perl/: Makefile  MosaikAlignment.i  MosaikReaderTest.pl
VisualStudio/: MOSAIK.props
VisualStudio/Mosaik/: Mosaik.sln
VisualStudio/MosaikAligner/: MosaikAligner.sln
VisualStudio/MosaikAligner/MosaikAligner/: MosaikAligner.vcproj  MosaikAligner.vcxproj  MosaikAligner.vcxproj.filters
VisualStudio/MosaikAssembler/: MosaikAssembler.sln
VisualStudio/MosaikAssembler/MosaikAssembler/: MosaikAssembler.vcproj
VisualStudio/MosaikBuild/: MosaikBuild.sln
VisualStudio/MosaikBuild/MosaikBuild/: MosaikBuild.vcproj
VisualStudio/MosaikCoverage/: MosaikCoverage.sln
VisualStudio/MosaikCoverage/MosaikCoverage/: MosaikCoverage.vcproj
VisualStudio/MosaikDupSnoop/MosaikDupSnoop/: MosaikDupSnoop.vcproj
VisualStudio/MosaikJump/: MosaikJump.sln
VisualStudio/MosaikJump/MosaikJump/: MosaikJump.vcxproj  MosaikJump.vcxproj.filters
VisualStudio/MosaikMerge/MosaikMerge/: MosaikMerge.vcproj
VisualStudio/MosaikSort/: MosaikSort.sln
VisualStudio/MosaikSort/MosaikSort/: MosaikSort.vcproj
VisualStudio/MosaikTests/MosaikTests/: MosaikTests.vcproj
VisualStudio/MosaikText/: MosaikText.sln
VisualStudio/MosaikText/MosaikText/: MosaikText.vcproj
data/: Align.sh  Assemble.sh  Build.sh
src/: CMakeLists.txt  Makefile  README
src/CommonSource/: CMakeLists.txt
src/CommonSource/AssemblyFormats/: GigaBayesFormat.cpp
src/CommonSource/Config/: Mosaik.h
src/CommonSource/DataStructures/: AlignedRead.h  Alignment.h  DnaHash.cpp  JumpDnaHash.cpp  MultiDnaHash.cpp  UbiqDnaHash.cpp  UbiqDnaHash.h
src/CommonSource/ExternalReadFormats/: Fasta.cpp  Fastq.cpp
src/CommonSource/MosaikReadFormat/: AlignmentReader.h  AlignmentWriter.cpp  AlignmentWriter.h  ReadWriter.cpp
src/CommonSource/PairwiseAlignment/: BandedSmithWaterman.cpp  SmithWatermanGotoh.cpp
src/CommonSource/UnitTests/: AlignmentQualityTest.cpp  ColorspaceUtilitiesTest.cpp  RegexUtilitiesTest.cpp
src/CommonSource/Utilities/: ColorspaceUtilities.cpp  ColorspaceUtilities.h  FastLZIO.cpp  MemoryUtilities.cpp  PosixThreads.c  ProgressBar.h  SafeFunctions.h
src/MosaikAligner/: #AlignmentThread.cpp#  AlignerMain.cpp  AlignmentThread.cpp  AlignmentThread.h  Makefile  MosaikAligner.cpp
src/MosaikAssembler/: MosaikAssembler.cpp
src/MosaikBuild/: MosaikBuild.cpp
src/MosaikJump/: JumpCreator.cpp  JumpCreator.h
src/MosaikSort/: PairedEndSort.cpp  PairedEndSort.h
src/VisualStudio/Mosaik/: Mosaik.sln
src/VisualStudio/MosaikAligner/: MosaikAligner.sln
src/VisualStudio/MosaikAligner/MosaikAligner/: MosaikAligner.vcproj
src/VisualStudio/MosaikAssembler/MosaikAssembler/: MosaikAssembler.vcproj
src/VisualStudio/MosaikBuild/MosaikBuild/: MosaikBuild.vcproj
src/VisualStudio/MosaikCoverage/MosaikCoverage/: MosaikCoverage.vcproj
src/VisualStudio/MosaikDupSnoop/: MosaikDupSnoop.sln
src/VisualStudio/MosaikDupSnoop/MosaikDupSnoop/: MosaikDupSnoop.vcproj
src/VisualStudio/MosaikJump/: MosaikJump.sln
src/VisualStudio/MosaikJump/MosaikJump/: MosaikJump.vcproj
src/VisualStudio/MosaikMerge/: MosaikMerge.sln
src/VisualStudio/MosaikMerge/MosaikMerge/: MosaikMerge.vcproj
src/VisualStudio/MosaikSort/: MosaikSort.sln
src/VisualStudio/MosaikSort/MosaikSort/: MosaikSort.vcproj
src/VisualStudio/MosaikTests/: MosaikTests.sln
src/VisualStudio/MosaikText/MosaikText/: MosaikText.vcproj
src/includes/: macosx.inc
